test/lastuse3_1.slq
// args: --run

def main(){
	x:=H(0:ğ”¹);
	def foo()â‡’x;
	return (foo,foo); /// error
}

